// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`long_start_line.html.erb 1`] = `
====================================options=====================================
parsers: ["erb"]
printWidth: 80
                                                                                | printWidth
=====================================input======================================
<%= link_to signout_path, class: "very-long-class-name-here-to-cause-line-break-break-break-break" do %>
    Welcome
<% end %>
=====================================output=====================================
<%= link_to signout_path, class: "very-long-class-name-here-to-cause-line-break-break-break-break" do %>
  Welcome
<% end %>

================================================================================
`;

exports[`multiline.html.erb 1`] = `
====================================options=====================================
parsers: ["erb"]
printWidth: 80
                                                                                | printWidth
=====================================input======================================
<div>
<%= react_component("HelloWorld", { greeting: "Hello from react-rails." }) %>

<%=
  react_component(
    "HelloWorld",
    { greeting: "Hello from react-rails." }
  ) %>
<%= react_component(
      "HelloWorld",
       { greeting: "Hello from react-rails." }
       ) %>

    <%= react_component(
      "HelloWorld",
       { greeting: "Hello from react-rails." }
       )
           %>
  <%=
 react_component(
      "HelloWorld",
    { greeting: "Hello from react-rails." },
    { greeting: "Hello from react-rails." },
    { greeting: "Hello from react-rails." },
    { greeting: "Hello from react-rails." }

       )
          %>

</div>

=====================================output=====================================
<div>
  <%= react_component('HelloWorld', { greeting: 'Hello from react-rails.' }) %>

  <%= react_component('HelloWorld', { greeting: 'Hello from react-rails.' }) %>
  <%= react_component('HelloWorld', { greeting: 'Hello from react-rails.' }) %>

  <%= react_component('HelloWorld', { greeting: 'Hello from react-rails.' }) %>
  <%=
    react_component(
      'HelloWorld',
      { greeting: 'Hello from react-rails.' },
      { greeting: 'Hello from react-rails.' },
      { greeting: 'Hello from react-rails.' },
      { greeting: 'Hello from react-rails.' },
    )
  %>
</div>

================================================================================
`;

exports[`multiline_comment.html.erb 1`] = `
====================================options=====================================
parsers: ["erb"]
printWidth: 80
                                                                                | printWidth
=====================================input======================================
<%#
This fails
  hey
    hey
      hey
  hey
%>

<%#
    This fails
    hey
      hey
        hey
    hey
%>

<%#
  This fails
  hey
    hey
      hey
  hey
%>

<%# This fails
  This fails
  hey
    hey
      hey
  hey
%>

<%# This fails
This fails
  hey
    hey
      hey
  hey
%>

<%# This fails
    This fails
    hey
      hey
        hey
    hey
%>

<%#This fails
  This fails
  hey
    hey
      hey
  hey
%>

<%#    This fails
  This fails
  hey
    hey
      hey
  hey
%>

<%#
    hey
%>

<%#
  hey
%>

<%#
hey
%>
=====================================output=====================================
<%#
  This fails
    hey
      hey
        hey
    hey
%>

<%#
  This fails
  hey
    hey
      hey
  hey
%>

<%#
  This fails
  hey
    hey
      hey
  hey
%>

<%#
  This fails
  This fails
  hey
    hey
      hey
  hey
%>

<%#
  This fails
  This fails
    hey
      hey
        hey
    hey
%>

<%#
  This fails
  This fails
  hey
    hey
      hey
  hey
%>

<%#
  This fails
  This fails
  hey
    hey
      hey
  hey
%>

<%#
  This fails
  This fails
  hey
    hey
      hey
  hey
%>

<%# hey %>

<%# hey %>

<%# hey %>

================================================================================
`;

exports[`single.html.erb 1`] = `
====================================options=====================================
parsers: ["erb"]
printWidth: 80
                                                                                | printWidth
=====================================input======================================



      <%= link_to 'New Order', new_order_path, class: "btn btn-success" %>




=====================================output=====================================
<%= link_to 'New Order', new_order_path, class: 'btn btn-success' %>

================================================================================
`;

exports[`single_multiline.html.erb 1`] = `
====================================options=====================================
parsers: ["erb"]
printWidth: 80
                                                                                | printWidth
=====================================input======================================





      <%= link_to "New Order",
       class: "btn btn-success" %>



=====================================output=====================================
<%= link_to 'New Order', class: 'btn btn-success' %>

================================================================================
`;

exports[`singleline_comments.html.erb 1`] = `
====================================options=====================================
parsers: ["erb"]
printWidth: 80
                                                                                | printWidth
=====================================input======================================
<%# link_to 'Approve', some_path, class: 'something', disabled: disabled %>
<%#= link_to 'Approve', some_path, class: 'something', disabled: disabled %>
<%#- link_to 'Approve', some_path, class: 'something', disabled: disabled %>
<%-# link_to 'Approve', some_path, class: 'something', disabled: disabled %>

<%# if smth %>
<%#else %>
<%# end %>
=====================================output=====================================
<%# link_to 'Approve', some_path, class: 'something', disabled: disabled %>
<%#= link_to 'Approve', some_path, class: 'something', disabled: disabled %>
<%#- link_to 'Approve', some_path, class: 'something', disabled: disabled %>
<%-# link_to 'Approve', some_path, class: 'something', disabled: disabled %>

<%# if smth %>
<%# else %>
<%# end %>

================================================================================
`;

exports[`singleline_formatted.html.erb 1`] = `
====================================options=====================================
parsers: ["erb"]
printWidth: 80
                                                                                | printWidth
=====================================input======================================
<% link_to "Very long string here and there", very_very_very_long_long_long_pathhhhhh_here, opt: "212", options: "222sdasdasd", class: "  322 ", dis: diss%>

=====================================output=====================================
<%
  link_to 'Very long string here and there',
          very_very_very_long_long_long_pathhhhhh_here,
          opt: '212',
          options: '222sdasdasd',
          class: '  322 ',
          dis: diss
%>

================================================================================
`;
